--- a/front/src/styles/globals.css
+++ b/front/src/styles/globals.css
@@ -1,27 +1,135 @@
+@import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@1,400;1,600&family=Roboto:wght@100&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    margin: 0px;
+    padding: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+      "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+      sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  
+  }
+  
+  code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+  }
+
+  .top_text {
+    animation: fadeIn 4s ease-in-out;
+    font-family: 'Playfair Display', serif;
+    font-weight: 600;
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.8);
+    letter-spacing: 0.2em;
+    line-height: 1.5; 
+    text-transform: uppercase;
+    transform: translate(-50%, -50%) rotate(-5deg); 
+    color: black;
+    font-size: 80px;
+    position: absolute;
+    top: 32%;
+    left: 40%;
+    transform: translate(-50%, -50%);
+    z-index: 9999;  
+    background: linear-gradient(to right, #878282, #000000);
+
+  /* グラデーションの文字にぼかしをかける */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+  }
+  @keyframes fadeIn {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
+
+  }
+  .top_text2 {
+    animation: typing 8s ease-in-out;
+    font-family: 'Orbitron', sans-serif;
+    font-weight: 10;
+    text-shadow: 1px 1px 3px rgba(255, 255, 255, 0.8);
+    letter-spacing: 0.2em;
+    line-height: 1.5; 
+    text-transform: uppercase;
+    transform: translate(-50%, -50%) rotate(-5deg); 
+    color: rgb(255, 255, 255);
+    font-size: 50px;
+    position: absolute;
+    top: 130%;
+    left: 70%;
+    transform: translate(-50%, -50%);
+    z-index: 9999;  
+    background: linear-gradient(to right, #878282, #000000);
+
+  /* グラデーションの文字にぼかしをかける */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+  }
+  @keyframes typing {
+    0%{width: 0}
+    50%{width: 100%; border-right-color: #00fff6 }
+    100%{border-right-color: transparent} 
+  }
+  
+  @keyframes blink {
+    50% { border-color: transparent }
+  }
+  
+  .typing-effect {
+    animation: 
+      typing 2s steps(40),
+      blink .5s step-end infinite alternate; 
+  }
+
+  .login {
+    position: absolute;
+    top: 0%;
+    right: 0%;
+    border-radius: 50%;
+    width: 15%;
+  }
+  
+  .createPostButton {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #3897f0;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 15px;
+  font-size: 16px;
+  cursor: pointer;
+  box-shadow: 0 3px 5px rgba(0,0,0,0.2);
 }
+
+.createPostButton:hover {
+  background-color: #1565c0;
+}
+
+.createPostButton:active {
+  box-shadow: none;
+  transform: translateY(2px);
+}
+
+.image {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 800px;
+  width: 800px;
+
+}
+.artpost {
+    top: 180%;
+    left: 80%;
+    position : absolute  ;
+    width: 200px;
+  }
