--- a/front/src/app/components/Hed.module.css
+++ b/front/src/app/components/Hed.module.css
@@ -1,6 +1,12 @@
 .header {
-  background-color: rgba(245, 245, 245, 0); 
-  padding: 20px;
+  box-sizing : border-box ;
+  backdrop-filter : blur(6px) ;
+  border : solid 2px rgba(255,255,255,.3) ;
+  background : linear-gradient( 135deg , rgba(255,255,255,.4) 8% , rgba(255,255,255,.1) 60% , rgba(255,255,255,.2) 92% ) ;
+  transition : all ease .7s ;
+  color : #fff ;
+  box-shadow : 2px 2px 3px rgba(255,255,255,.2) inset ; 
+  padding: 35px;
   text-align: left;
   position: fixed;  
   top: 0;  
@@ -8,7 +14,7 @@
   width: 100%;  
   z-index: 1000;  
   
-  border-radius: 5px;
+  
 }
 
 .navLink {
@@ -31,10 +37,10 @@
   }
 }
 
-.name {
+.size {
   position: absolute;
-  top: 10px;
-  left: 50px;
+  top: 0px;
+  left: 80px;
   width: auto;
-  height: 250px;
+  height: 50px;
 }
