--- a/front/src/styles/globals.css
+++ b/front/src/styles/globals.css
@@ -133,3 +133,23 @@ body {
     position : absolute  ;
     width: 200px;
   }
+
+  @keyframes fa-bounce {
+    0%, 100% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-20px);
+    }
+  }
+  @keyframes scaleRotate {
+    0% {
+      transform: scale(0.5) rotate(0deg);
+    }
+    50% {
+      transform: scale(1.2) rotate(180deg);
+    }
+    100% {
+      transform: scale(1) rotate(360deg);
+    }
+  }
