--- a/front/src/app/components/Postcard.module.css
+++ b/front/src/app/components/Postcard.module.css
@@ -350,7 +350,9 @@
   
   .editButton {
     position: absolute;
-    left: 50%;
+
+    left: 20%;
+    top: 200px;
   }
   .deleteButton{
     position: absolute;
