--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -48,6 +48,34 @@ body {
     100% {opacity: 1;}
 
   }
+  .top_text-2 {
+    animation: fadeIn 4s ease-in-out;
+    font-family: 'Playfair Display', serif;
+    font-weight: 600;
+    text-shadow: 1px 1px 3px rgba(255, 255, 255, 0.8);
+    letter-spacing: 0.2em;
+    line-height: 1.5; 
+    text-transform: uppercase;
+    transform: translate(-50%, -50%) rotate(-5deg); 
+    color: white;
+    font-size: 30px;
+    position: absolute;
+    top: 210%;
+    left: 70%;
+    transform: translate(-50%, -50%);
+    z-index: 9999;  
+    background: linear-gradient(to right, #f4f4f4, #fffcfc);
+
+  /* グラデーションの文字にぼかしをかける */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+  }
+  @keyframes fadeIn {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
+
+  }
   .top_text2 {
     animation: fadeIn 4s ease-in-out;
     font-family: 'Playfair Display', serif;
