--- a/front/src/app/components/ImageUploadModal.module.css
+++ b/front/src/app/components/ImageUploadModal.module.css
@@ -1,33 +1,36 @@
-/* components/ImageUploadModal.module.css */
 /* ImageUploadModal.module.css */
 
-@keyframes slideIn {
-  from {
-    transform: translateX(100%);
+@keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
   }
-  to {
-    transform: translateX(0);
+  
+  @keyframes fadeOut {
+    from {
+      opacity: 1;
+    }
+    to {
+      opacity: 0;
+    }
   }
-}
-
-@keyframes slideOut {
-  from {
-    transform: translateX(0);
-  }
-  to {
-    transform: translateX(100%);
-  }
-}
+  
+  /* ImageUploadModal.module.css */
 
 .sidebarOverlay {
     position: fixed;
     top: 0;
-    bottom: 0;
-    right: 0;
     left: 0;
+    right: 0;
+    bottom: 0;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 1000; /* Overlay should be on top of other content */
-    animation: fadeIn 0.3s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   
   .sidebar {
@@ -35,17 +38,48 @@
     transition : all ease .7s ;
     color : #fff ;
     padding: 20px;
-    width: 200px; /* Adjust width as needed */
-    height: 100%;
-    position: fixed;
-    right: 0; /* Align the sidebar to the right */
-    top: 0;
-    bottom: 0;
-    overflow: auto; /* In case content overflows */
+    width: 1000px; /* Adjust width as needed */
+    height: 500px;
+    max-width: 90%; /* Ensure it doesn't exceed the width of the screen */
+    border-radius: 8px; /* Optional: for rounded corners */
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Optional: for shadow */
     z-index: 1001; /* Sidebar should be above the overlay */
-    animation: slideIn 0.3s forwards;
+    animation: fadeIn 0.3s ease forwards;
   }
-
+  
   .sidebarClosing {
-    animation: slideOut 0.3s forwards;
+    animation: fadeOut 0.3s ease forwards;
+  }
+  
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+      transform: translateY(-10%);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
+  @keyframes fadeOut {
+    from {
+      opacity: 1;
+      transform: translateY(0);
+    }
+    to {
+      opacity: 0;
+      transform: translateY(10%);
+    }
+  }
+  .uploadButton {
+    padding: 10px 20px;
+    position: relative;
+    left: 45%;
+    background-color: #e5e7f0;
+    color: rgb(30, 28, 28);
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s;
   }
