--- a/front/src/styles/robot.css
+++ b/front/src/styles/robot.css
@@ -57,28 +57,24 @@
 .face{
     z-index : 2 ;
     background : #fff; /* 背景色を白に設定 */
-    background-image:
-    radial-gradient(at 40% 20%, rgba(0,0,0,0.1) 0px, transparent 50%),
-    radial-gradient(at 80% 0%, rgba(0,0,0,0.1) 0px, transparent 50%),
-    radial-gradient(at 0% 50%, rgba(0,0,0,0.1) 0px, transparent 50%),
-    radial-gradient(at 80% 50%, rgba(0,0,0,0.1) 0px, transparent 50%),
-    radial-gradient(at 0% 100%, rgba(0,0,0,0.1) 0px, transparent 50%),
-    radial-gradient(at 80% 100%, rgba(0,0,0,0.1) 0px, transparent 50%),
-    radial-gradient(at 0% 0%, rgba(0,0,0,0.1) 0px, transparent 50%);
+    background: linear-gradient(135deg, rgba(255,255,255,0.4) 8%, rgba(255,255,255,0.1) 60%, rgba(255,255,255,0.2) 92%);
+    box-shadow: 0 0 8px rgba(8, 8, 8, 0.6) inset;
     border-radius: 20px;
+    border: solid 2px rgba(255,255,255,0.3);
 }
 .face__wrapper{
-    position : absolute ;
-    top : 0 ;
-    left : 0 ;
-    right : 0 ;
-    bottom : 0 ;
-    margin : auto ;
-    width : 200px ;
-    height : 64px ;
-    background : #333 ;
-    box-shadow : 0 0 8px rgba(0,0,0,.6) inset ;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    width: 200px;
+    height: 64px;
+    background: linear-gradient(135deg, rgba(255,255,255,0.4) 8%, rgba(255,255,255,0.1) 60%, rgba(255,255,255,0.2) 92%);
+    box-shadow: 0 0 8px rgba(86, 79, 79, 0.6) inset;
     border-radius: 20px;
+    border: solid 2px rgba(255,255,255,0.3);
 }
 .eye{
     position : absolute ;
@@ -104,10 +100,12 @@
     border-radius : 20px ;
     background : #ffde55 ;
     box-sizing : border-box ;
-    border : solid 1px #a48c00 ;
+    border : solid 0.5px #bebe20 ;
     box-shadow : 0 0 8px rgba(255,255,0 ,1)  ;
     animation : eye linear 6s infinite ;
     transition : all ease .2s ;
+    right : 60% ;
+    left : 60%
 }
 .eye::before{
     left : 0 ;
@@ -169,16 +167,11 @@
 }
 .parts_A::before,
 .parts_A::after{
-    background : #888 ;
-    background-color:hsla(0,4%,45%,1);
-    background-image:
-    radial-gradient(at 40% 20%, hsla(25,10%,31%,1) 0px, transparent 50%),
-    radial-gradient(at 80% 0%, hsla(188,8%,39%,1) 0px, transparent 50%),
-    radial-gradient(at 0% 50%, hsla(350,2%,45%,1) 0px, transparent 50%),
-    radial-gradient(at 80% 50%, hsla(340,8%,20%,1) 0px, transparent 50%),
-    radial-gradient(at 0% 100%, hsla(19,0%,0%,1) 0px, transparent 50%),
-    radial-gradient(at 80% 100%, hsla(29,15%,16%,1) 0px, transparent 50%),
-    radial-gradient(at 0% 0%, hsla(339,0%,60%,1) 0px, transparent 50%);
+    border: solid 2px rgba(255,255,255,.3); /* 境界線のスタイルを指定 */
+    background: linear-gradient(135deg, rgba(255,255,255,.4) 8%, rgba(255,255,255,.1) 60%, rgba(255,255,255,.2) 92%); /* 背景のグラデーションを指定 */
+    border-radius: 50%; /* 丸みを加える */
+    box-shadow: 0px 0px 8px rgba(255, 255, 255, 0.6), /* 内側の光沢感 */
+                inset 0px 0px 8px rgba(255, 255, 255, 0.3); /* 外側の光沢感 */
 }
 .parts_A::before,
 .parts_A::after{
@@ -212,28 +205,18 @@
 .parts_B::before{
     transform-origin : bottom center ;
     transform : rotatex(96deg) skewX(0deg);
-    background-color:hsla(0,4%,45%,1);
-    background-image:
-    radial-gradient(at 40% 20%, hsla(25,10%,31%,1) 0px, transparent 50%),
-    radial-gradient(at 80% 0%, hsla(188,8%,39%,1) 0px, transparent 50%),
-    radial-gradient(at 0% 50%, hsla(350,2%,45%,1) 0px, transparent 50%),
-    radial-gradient(at 80% 50%, hsla(340,8%,20%,1) 0px, transparent 50%),
-    radial-gradient(at 0% 100%, hsla(19,0%,0%,1) 0px, transparent 50%),
-    radial-gradient(at 80% 100%, hsla(29,15%,16%,1) 0px, transparent 50%),
-    radial-gradient(at 0% 0%, hsla(339,0%,60%,1) 0px, transparent 50%);
+    border: solid 2px rgba(255, 255, 255, 0.3);
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.4) 8%, rgba(255, 255, 255, 0.1) 60%, rgba(255, 255, 255, 0.2) 92%);
+    transition: all ease 0.7s;
+    color: #fff;
 }
 .parts_B::after{
     transform-origin : top center ;
     transform : rotatex(-96deg) skewX(0deg);
-    background-color:hsla(0,4%,45%,1);
-    background-image:
-    radial-gradient(at 40% 20%, hsla(25,10%,31%,1) 0px, transparent 50%),
-    radial-gradient(at 80% 0%, hsla(188,8%,39%,1) 0px, transparent 50%),
-    radial-gradient(at 0% 50%, hsla(350,2%,45%,1) 0px, transparent 50%),
-    radial-gradient(at 80% 50%, hsla(340,8%,20%,1) 0px, transparent 50%),
-    radial-gradient(at 0% 100%, hsla(19,0%,0%,1) 0px, transparent 50%),
-    radial-gradient(at 80% 100%, hsla(29,15%,16%,1) 0px, transparent 50%),
-    radial-gradient(at 0% 0%, hsla(339,0%,60%,1) 0px, transparent 50%);
+    border: solid 2px rgba(255, 255, 255, 0.3);
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.4) 8%, rgba(255, 255, 255, 0.1) 60%, rgba(255, 255, 255, 0.2) 92%);
+    transition: all ease 0.7s;
+    color: #fff;
 }
 .area_1:hover ~ .robot .front,
 .area_1:hover ~ .robot .face{
