--- a/front/src/app/components/Robot.module.css
+++ b/front/src/app/components/Robot.module.css
@@ -72,6 +72,8 @@
     border-radius: 20px;
     /* その他のスタイル */
   }
+
+  
   
 .front,
 .face{
@@ -577,79 +579,74 @@
   
   @keyframes typing1 {
     0% { content: ''; }
-    5% { content: 'G'; }
-    10% { content: 'Ga'; }
-    15% { content: 'Gal'; }
-    20% { content: 'Gall'; }
-    25% { content: 'Galle'; }
-    30% { content: 'Galler'; }
-    35% { content: 'Gallery'; }
-    40% { content: 'Gallery.'; }
-    45% { content: 'Gallery.a'; }
-    50% { content: 'Gallery.ai'; }
-    55% { content: 'Gallery.aiへ'; }
-    60% { content: 'Gallery.aiへ'; }
-    65% { content: 'Gallery.aiへヨ'; }
-    70% { content: 'Gallery.aiへヨー'; }
-    75% { content: 'Gallery.aiへヨーコ'; }
-    80% { content: 'Gallery.aiへヨーコソ'; }
-    85% { content: 'Gallery.aiへヨーコソ！'; }
-    90% { content: 'Gallery.aiへヨーコソ！ニャ'; }
-    95% { content: 'Gallery.aiへヨーコソ！ニャ！'; }
-    100% { content: 'Gallery.aiへヨーコソ！ニャ！'; }
+    5% { content: '『'; }
+    10% { content: '『G'; }
+    15% { content: '『Ga'; }
+    20% { content: '『Gal'; }
+    25% { content: '『Gall'; }
+    30% { content: '『Galle'; }
+    35% { content: '『Gallery'; }
+    40% { content: '『Gallery.'; }
+    45% { content: '『Gallery.a'; }
+    50% { content: '『Gallery.ai'; }
+    55% { content: '『Gallery.ai』'; }
+    60% { content: '『Gallery.ai』へ'; }
+    65% { content: '『Gallery.ai』へヨ'; }
+    70% { content: '『Gallery.ai』へヨー'; }
+    75% { content: '『Gallery.ai』へヨーコ'; }
+    80% { content: '『Gallery.ai』へヨーコソ'; }
+    85% { content: '『Gallery.ai』へヨーコソ！'; }
+    90% { content: '『Gallery.ai』へヨーコソ！ニャ'; }
+    95% { content: '『Gallery.ai』へヨーコソ！ニャ！'; }
+    100% { content: '『Gallery.ai』へヨーコソ！ニャ！'; }
   }
   @keyframes typing2 {
     0% { content: ''; }
-    4% { content: 'ボ'; }
-    8% { content: 'ボク'; }
-    12% { content: 'ボクの'; }
-    16% { content: 'ボクのニ'; }
-    20% { content: 'ボクのニャ'; }
-    24% { content: 'ボクのニャマ'; }
-    28% { content: 'ボクのニャマエ'; }
-    32% { content: 'ボクのニャマエは'; }
-    36% { content: 'ボクのニャマエは「'; }
-    40% { content: 'ボクのニャマエは「ニ'; }
-    44% { content: 'ボクのニャマエは「ニャ'; }
-    48% { content: 'ボクのニャマエは「ニャビ'; }
-    52% { content: 'ボクのニャマエは「ニャビ！'; }
-    56% { content: 'ボクのニャマエは「ニャビ！」'; }
-    60% { content: 'ボクのニャマエは「ニャビ！」'; } 
-    64% { content: 'ボクのニャマエは「ニャビ！」'; }
-    68% { content: 'ボクのニャマエは「ニャビ！」'; }
-    72% { content: 'ボクのニャマエは「ニャビ！」'; }
-    76% { content: 'ボクのニャマエは「ニャビ！」'; }
-    80% { content: 'ボクのニャマエは「ニャビ！」'; }
-    84% { content: 'ボクのニャマエは「ニャビ！」'; }
-    88% { content: 'ボクのニャマエは「ニャビ！」'; }
-    92% { content: 'ボクのニャマエは「ニャビ！」'; }
-    96% { content: 'ボクのニャマエは「ニャビ！」'; }
-    100% { content: 'ボクのニャマエは「ニャビ！」'; }
+    5% { content: '『'; }
+    10% { content: '『G'; }
+    15% { content: '『Ga'; }
+    20% { content: '『Gal'; }
+    25% { content: '『Gall'; }
+    30% { content: '『Galle'; }
+    35% { content: '『Gallery'; }
+    40% { content: '『Gallery.'; }
+    45% { content: '『Gallery.a'; }
+    50% { content: '『Gallery.ai'; }
+    55% { content: '『Gallery.ai』'; }
+    60% { content: '『Gallery.ai』ハ'; }
+    65% { content: '『Gallery.ai』ハA'; }
+    70% { content: '『Gallery.ai』ハAI'; }
+    75% { content: '『Gallery.ai』ハAIア'; }
+    80% { content: '『Gallery.ai』ハAIアー'; }
+    85% { content: '『Gallery.ai』ハAIアート'; }
+    90% { content: '『Gallery.ai』ハAIアートサ'; }
+    95% { content: '『Gallery.ai』ハAIアートサー'; }
+    100% { content: '『Gallery.ai』ハAIアートサービスニャ！'; }
   }
 
   @keyframes typing3 {
     0% { content: ''; }
-    5% { content: 'こ'; }
-    10% { content: 'この'; }
-    15% { content: 'このア'; }
-    20% { content: 'このアプ'; }
-    25% { content: 'このアプリ'; }
-    30% { content: 'このアプリで'; }
-    35% { content: 'このアプリでは'; }
-    40% { content: 'このアプリではA'; }
-    45% { content: 'このアプリではAI'; }
-    50% { content: 'このアプリではAIを'; }
-    55% { content: 'このアプリではAIを使'; }
-    60% { content: 'このアプリではAIを使っ'; }
-    65% { content: 'このアプリではAIを使った'; }
-    70% { content: 'このアプリではAIを使った画'; }
-    75% { content: 'このアプリではAIを使った画像'; }
-    80% { content: 'このアプリではAIを使った画像生'; }
-    85% { content: 'このアプリではAIを使った画像生成'; }
-    90% { content: 'このアプリではAIを使った画像生成が'; }
-    95% { content: 'このアプリではAIを使った画像生成がで'; }
-    100% { content: 'このアプリではAIを使った画像生成ができますニャ'; }
-}
+    5% { content: 'オ'; }
+    10% { content: 'オタ'; }
+    15% { content: 'オタメ'; }
+    20% { content: 'オタメシ'; }
+    25% { content: 'オタメシニ'; }
+    30% { content: 'オタメシニ、'; }
+    35% { content: 'オタメシニ、ツ'; }
+    40% { content: 'オタメシニ、ツク'; }
+    45% { content: 'オタメシニ、ツクッ'; }
+    50% { content: 'オタメシニ、ツクッテ'; }
+    55% { content: 'オタメシニ、ツクッテミ'; }
+    60% { content: 'オタメシニ、ツクッテミテ'; }
+    65% { content: 'オタメシニ、ツクッテミテニ'; }
+    70% { content: 'オタメシニ、ツクッテミテニャ'; }
+    75% { content: 'オタメシニ、ツクッテミテニャ！'; }
+    80% { content: 'オタメシニ、ツクッテミテニャ！'; }
+    85% { content: 'オタメシニ、ツクッテミテニャ！'; }
+    90% { content: 'オタメシニ、ツクッテミテニャ！'; }
+    95% { content: 'オタメシニ、ツクッテミテニャ！'; }
+    100% { content: 'オタメシニ、ツクッテミテニャ！'; }
+  }
   
   /* typing4 アニメーション */
   @keyframes typing4 {
