--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -2,11 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-
-html, body {
+* {
   margin: 0;
   padding: 0;
-  
+  box-sizing: border-box;
+}
+body, html {
+  width: 100%;
+  height: 100%;
 }
 
 body {
