--- a/front/src/app/styles.css
+++ b/front/src/app/styles.css
@@ -2,13 +2,9 @@
   box-sizing: border-box;
 }
 
-html,
-body,
-#root {
-  width: 100vw;
+body, html {
+  width: 100%;
   height: 100%;
-  margin: 0;
-  padding: 0;
 }
 
 body {
