--- a/front/src/app/components/HomePage.module.css
+++ b/front/src/app/components/HomePage.module.css
@@ -11,8 +11,8 @@
 .root {
     width: 100vw;
     height: 100vh;
-    margin: 0;
-    padding: 0;
+    margin-top: 0px;
+  padding-top: 0px;
 }
 .imageHoverEffect {
     transition: brightness 0.3s ease;
