--- a/front/src/app/components/CommonStyles.module.css
+++ b/front/src/app/components/CommonStyles.module.css
@@ -33,3 +33,91 @@
   background-color: linear-gradient(135deg, rgba(255,255,255,.4) 8%, rgba(255,255,255,.1) 60%, rgba(255,255,255,.2) 92%);
   filter: drop-shadow(0 0 10px #FFFFFF);
 }
+
+.animatedButton {
+  position: relative;
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  padding: 2px 24px; /* paddingを小さく調整 */
+  border: 4px solid;
+  border-color: transparent;
+  font-size: 14px; /* font-sizeを小さく調整 */
+  background-color: transparent;
+  border-radius: 100px;
+  font-weight: 600;
+  color: #ffffff;
+  box-shadow: 0 0 0 2px #ffffff;
+  cursor: pointer;
+  overflow: hidden;
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.animatedButton svg {
+  position: absolute;
+  width: 20px; /* SVGのサイズを小さく調整 */
+  fill: #ffffff;
+  z-index: 9;
+  transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.arr1 {
+  right: 16px;
+}
+
+.arr2 {
+  left: -25%;
+}
+
+.circle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 20px;
+  height: 20px;
+  background-color: #c5e5e4;
+  border-radius: 50%;
+  opacity: 0;
+  transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.text {
+  position: relative;
+  z-index: 1;
+  transform: translateX(-12px);
+  transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.animatedButton:hover {
+  box-shadow: 0 0 0 12px transparent;
+  color: #212121;
+  border-radius: 12px;
+}
+
+.animatedButton:hover .arr1 {
+  right: -25%;
+}
+
+.animatedButton:hover .arr2 {
+  left: 16px;
+}
+
+.animatedButton:hover .text {
+  transform: translateX(12px);
+}
+
+.animatedButton:hover svg {
+  fill: #1f387e;
+}
+
+.animatedButton:active {
+  scale: 0.95;
+  box-shadow: 0 0 0 4px greenyellow;
+}
+
+.animatedButton:hover .circle {
+  width: 220px;
+  height: 220px;
+  opacity: 1;
+}
