--- a/front/src/app/components/Robot.module.css
+++ b/front/src/app/components/Robot.module.css
@@ -574,170 +574,148 @@
   
   @keyframes typing1 {
     0% { content: ''; }
-    5% { content: '『'; }
-    10% { content: '『G'; }
-    15% { content: '『Ga'; }
-    20% { content: '『Gal'; }
-    25% { content: '『Gall'; }
-    30% { content: '『Galle'; }
-    35% { content: '『Gallery'; }
-    40% { content: '『Gallery.'; }
-    45% { content: '『Gallery.a'; }
-    50% { content: '『Gallery.ai'; }
-    55% { content: '『Gallery.ai』'; }
-    60% { content: '『Gallery.ai』へ'; }
-    65% { content: '『Gallery.ai』へヨ'; }
-    70% { content: '『Gallery.ai』へヨー'; }
-    75% { content: '『Gallery.ai』へヨーコ'; }
-    80% { content: '『Gallery.ai』へヨーコソ'; }
-    85% { content: '『Gallery.ai』へヨーコソ！'; }
-    90% { content: '『Gallery.ai』へヨーコソ！ニャ'; }
-    95% { content: '『Gallery.ai』へヨーコソ！ニャ！'; }
-    100% { content: '『Gallery.ai』へヨーコソ！ニャ！'; }
-  }
-  @keyframes typing2 {
+    5% { content: '「'; }
+    10% { content: '「G'; }
+    15% { content: '「Ga'; }
+    20% { content: '「Gal'; }
+    25% { content: '「Gall'; }
+    30% { content: '「Galle'; }
+    35% { content: '「Gallery'; }
+    40% { content: '「Gallery.'; }
+    45% { content: '「Gallery.a'; }
+    50% { content: '「Gallery.ai'; }
+    55% { content: '「Gallery.ai」'; }
+    60% { content: '「Gallery.ai」へ'; }
+    65% { content: '「Gallery.ai」へヨ'; }
+    70% { content: '「Gallery.ai」へヨー'; }
+    75% { content: '「Gallery.ai」へヨーコ'; }
+    80% { content: '「Gallery.ai」へヨーコソ'; }
+    85% { content: '「Gallery.ai」へヨーコソ！'; }
+    90% { content: '「Gallery.ai」へヨーコソ！ニャ'; }
+    95% { content: '「Gallery.ai」へヨーコソ！ニャ！'; }
+    100% { content: '「Gallery.ai」へヨーコソ！ニャ！'; }
+}
+@keyframes typing2 {
     0% { content: ''; }
-    5% { content: '『'; }
-    10% { content: '『G'; }
-    15% { content: '『Ga'; }
-    20% { content: '『Gal'; }
-    25% { content: '『Gall'; }
-    30% { content: '『Galle'; }
-    35% { content: '『Gallery'; }
-    40% { content: '『Gallery.'; }
-    45% { content: '『Gallery.a'; }
-    50% { content: '『Gallery.ai'; }
-    55% { content: '『Gallery.ai』'; }
-    60% { content: '『Gallery.ai』ハ'; }
-    65% { content: '『Gallery.ai』ハA'; }
-    70% { content: '『Gallery.ai』ハAI'; }
-    75% { content: '『Gallery.ai』ハAIア'; }
-    80% { content: '『Gallery.ai』ハAIアー'; }
-    85% { content: '『Gallery.ai』ハAIアート'; }
-    90% { content: '『Gallery.ai』ハAIアートサ'; }
-    95% { content: '『Gallery.ai』ハAIアートサー'; }
-    100% { content: '『Gallery.ai』ハAIアートサービスニャ！'; }
-  }
+    5% { content: 'ボ'; }
+    10% { content: 'ボク'; }
+    15% { content: 'ボクは'; }
+    20% { content: 'ボクはニ'; }
+    25% { content: 'ボクはニャ'; }
+    30% { content: 'ボクはニャビ'; }
+    35% { content: 'ボクはニャビ！'; }
+    40% { content: 'ボクはニャビ！ア'; }
+    45% { content: 'ボクはニャビ！アナ'; }
+    50% { content: 'ボクはニャビ！アナタ'; }
+    55% { content: 'ボクはニャビ！アナタの'; }
+    60% { content: 'ボクはニャビ！アナタのニ'; }
+    65% { content: 'ボクはニャビ！アナタのニャ'; }
+    70% { content: 'ボクはニャビ！アナタのニャビ'; }
+    75% { content: 'ボクはニャビ！アナタのニャビゲ'; }
+    80% { content: 'ボクはニャビ！アナタのニャビゲー'; }
+    85% { content: 'ボクはニャビ！アナタのニャビゲーシ'; }
+    90% { content: 'ボクはニャビ！アナタのニャビゲーショ'; }
+    95% { content: 'ボクはニャビ！アナタのニャビゲーション'; }
+    100% { content: 'ボクはニャビ！アナタのニャビゲーションロボットニャ！'; }
+}
 
-  @keyframes typing3 {
+@keyframes typing3 {
     0% { content: ''; }
-    5% { content: 'オ'; }
-    10% { content: 'オタ'; }
-    15% { content: 'オタメ'; }
-    20% { content: 'オタメシ'; }
-    25% { content: 'オタメシニ'; }
-    30% { content: 'オタメシニ、'; }
-    35% { content: 'オタメシニ、ツ'; }
-    40% { content: 'オタメシニ、ツク'; }
-    45% { content: 'オタメシニ、ツクッ'; }
-    50% { content: 'オタメシニ、ツクッテ'; }
-    55% { content: 'オタメシニ、ツクッテミ'; }
-    60% { content: 'オタメシニ、ツクッテミテ'; }
-    65% { content: 'オタメシニ、ツクッテミテニ'; }
-    70% { content: 'オタメシニ、ツクッテミテニャ'; }
-    75% { content: 'オタメシニ、ツクッテミテニャ！'; }
-    80% { content: 'オタメシニ、ツクッテミテニャ！'; }
-    85% { content: 'オタメシニ、ツクッテミテニャ！'; }
-    90% { content: 'オタメシニ、ツクッテミテニャ！'; }
-    95% { content: 'オタメシニ、ツクッテミテニャ！'; }
-    100% { content: 'オタメシニ、ツクッテミテニャ！'; }
+    5% { content: 'ヨ'; }
+    10% { content: 'ヨロ'; }
+    15% { content: 'ヨロシ'; }
+    20% { content: 'ヨロシク'; }
+    25% { content: 'ヨロシク！'; }
+    30% { content: 'ヨロシク！('; }
+    35% { content: 'ヨロシク！(^'; }
+    40% { content: 'ヨロシク！(^_'; }
+    45% { content: 'ヨロシク！(^_-'; }
+    50% { content: 'ヨロシク！(^_-)'; }
+    55% { content: 'ヨロシク！(^_-)ニ'; }
+    60% { content: 'ヨロシク！(^_-)ニャ'; }
+    65% { content: 'ヨロシク！(^_-)ニャ！'; }
+    70% { content: 'ヨロシク！(^_-)ニャ！'; }
+    75% { content: 'ヨロシク！(^_-)ニャ！'; }
+    80% { content: 'ヨロシク！(^_-)ニャ！'; }
+    85% { content: 'ヨロシク！(^_-)ニャ！'; }
+    90% { content: 'ヨロシク！(^_-)ニャ！'; }
+    95% { content: 'ヨロシク！(^_-)ニャ！'; }
+    100% { content: 'ヨロシク！(^_-)ニャ！'; }
   }
   
   /* typing4 アニメーション */
   @keyframes typing4 {
     0% { content: ''; }
-    5% { content: '生'; }
-    10% { content: '生成'; }
-    15% { content: '生成し'; }
-    20% { content: '生成した'; }
-    25% { content: '生成した画'; }
-    30% { content: '生成した画像'; }
-    35% { content: '生成した画像は'; }
-    40% { content: '生成した画像は自'; }
-    45% { content: '生成した画像は自分'; }
-    50% { content: '生成した画像は自分の'; }
-    55% { content: '生成した画像は自分の個'; }
-    60% { content: '生成した画像は自分の個展'; }
-    65% { content: '生成した画像は自分の個展に'; }
-    70% { content: '生成した画像は自分の個展に飾'; }
-    75% { content: '生成した画像は自分の個展に飾る'; }
-    80% { content: '生成した画像は自分の個展に飾るこ'; }
-    85% { content: '生成した画像は自分の個展に飾ること'; }
-    90% { content: '生成した画像は自分の個展に飾ることも'; }
-    95% { content: '生成した画像は自分の個展に飾ることもで'; }
-    100% { content: '生成した画像は自分の個展に飾ることもできるにゃ！'; }
-}
+    5% { content: '「'; }
+    10% { content: '「G'; }
+    15% { content: '「Ga'; }
+    20% { content: '「Gal'; }
+    25% { content: '「Gall'; }
+    30% { content: '「Galle'; }
+    35% { content: '「Gallery'; }
+    40% { content: '「Gallery.'; }
+    45% { content: '「Gallery.a'; }
+    50% { content: '「Gallery.ai'; }
+    55% { content: '「Gallery.ai」'; }
+    60% { content: '「Gallery.ai」は'; }
+    65% { content: '「Gallery.ai」は「'; }
+    70% { content: '「Gallery.ai」は「A'; }
+    75% { content: '「Gallery.ai」は「AI'; }
+    80% { content: '「Gallery.ai」は「AI個'; }
+    85% { content: '「Gallery.ai」は「AI個展'; }
+    90% { content: '「Gallery.ai」は「AI個展生成'; }
+    95% { content: '「Gallery.ai」は「AI個展生成サービス'; }
+    100% { content: '「Gallery.ai」は「AI個展生成サービス」ニャ！'; }
+  }
   
   /* typing5 アニメーション */
+
   @keyframes typing5 {
     0% { content: ''; }
-    5% { content: '他'; }
-    10% { content: '他に'; }
-    15% { content: '他にも'; }
-    20% { content: '他にも他'; }
-    25% { content: '他にも他の'; }
-    30% { content: '他にも他の人'; }
-    35% { content: '他にも他の人の'; }
-    40% { content: '他にも他の人の個'; }
-    45% { content: '他にも他の人の個展'; }
-    50% { content: '他にも他の人の個展を'; }
-    55% { content: '他にも他の人の個展を見'; }
-    60% { content: '他にも他の人の個展を見る'; }
-    65% { content: '他にも他の人の個展を見るこ'; }
-    70% { content: '他にも他の人の個展を見ること'; }
-    75% { content: '他にも他の人の個展を見ることも'; }
-    80% { content: '他にも他の人の個展を見ることもで'; }
-    85% { content: '他にも他の人の個展を見ることもでき'; }
-    90% { content: '他にも他の人の個展を見ることもできる'; }
-    95% { content: '他にも他の人の個展を見ることもできるニャ'; }
-    100% { content: '他にも他の人の個展を見ることもできるニャ！'; }
-}
+    5% { content: '個'; }
+    10% { content: '個展'; }
+    15% { content: '個展が'; }
+    20% { content: '個展がで'; }
+    25% { content: '個展ができ'; }
+    30% { content: '個展ができた'; }
+    35% { content: '個展ができたら'; }
+    40% { content: '個展ができたらS'; }
+    45% { content: '個展ができたらSha'; }
+    50% { content: '個展ができたらShar'; }
+    55% { content: '個展ができたらShare'; }
+    60% { content: '個展ができたらShareボ'; }
+    65% { content: '個展ができたらShareボタ'; }
+    70% { content: '個展ができたらShareボタン'; }
+    75% { content: '個展ができたらShareボタンで'; }
+    80% { content: '個展ができたらShareボタンで、'; }
+    85% { content: '個展ができたらShareボタンで、ア'; }
+    90% { content: '個展ができたらShareボタンで、アナ'; }
+    95% { content: '個展ができたらShareボタンで、アナタ'; }
+    100% { content: '個展ができたらShareボタンで、アナタの個展を世界に広げようニャ！'; }
+  }
 
-@keyframes typing5 {
-  0% { content: ''; }
-  5% { content: '他'; }
-  10% { content: '他に'; }
-  15% { content: '他にも'; }
-  20% { content: '他にも他'; }
-  25% { content: '他にも他の'; }
-  30% { content: '他にも他の人'; }
-  35% { content: '他にも他の人の'; }
-  40% { content: '他にも他の人の個'; }
-  45% { content: '他にも他の人の個展'; }
-  50% { content: '他にも他の人の個展を'; }
-  55% { content: '他にも他の人の個展を見'; }
-  60% { content: '他にも他の人の個展を見る'; }
-  65% { content: '他にも他の人の個展を見るこ'; }
-  70% { content: '他にも他の人の個展を見ること'; }
-  75% { content: '他にも他の人の個展を見ることも'; }
-  80% { content: '他にも他の人の個展を見ることもで'; }
-  85% { content: '他にも他の人の個展を見ることもでき'; }
-  90% { content: '他にも他の人の個展を見ることもできる'; }
-  95% { content: '他にも他の人の個展を見ることもできるニャ'; }
-  100% { content: '他にも他の人の個展を見ることもできるニャ！'; }
-}
 @keyframes typing6 {
-  0% { content: ''; }
-  5% { content: 'こ'; }
-  10% { content: 'ここ'; }
-  15% { content: 'ここま'; }
-  20% { content: 'ここまで'; }
-  25% { content: 'ここまで話'; }
-  30% { content: 'ここまで話を'; }
-  35% { content: 'ここまで話を聞'; }
-  40% { content: 'ここまで話を聞い'; }
-  45% { content: 'ここまで話を聞いて'; }
-  50% { content: 'ここまで話を聞いてく'; }
-  55% { content: 'ここまで話を聞いてくれ'; }
-  60% { content: 'ここまで話を聞いてくれて'; }
-  65% { content: 'ここまで話を聞いてくれてあ'; }
-  70% { content: 'ここまで話を聞いてくれてあり'; }
-  75% { content: 'ここまで話を聞いてくれてありが'; }
-  80% { content: 'ここまで話を聞いてくれてありが'; }
-  85% { content: 'ここまで話を聞いてくれてありがと'; }
-  90% { content: 'ここまで話を聞いてくれてありがとニ'; }
-  95% { content: 'ここまで話を聞いてくれてありがとニャ'; }
-  100% { content: 'ここまで話を聞いてくれてありがとニャ！'; }
+    0% { content: ''; }
+    5% { content: '「'; }
+    10% { content: '「G'; }
+    15% { content: '「Ga'; }
+    20% { content: '「Gal'; }
+    25% { content: '「Gall'; }
+    30% { content: '「Galle'; }
+    35% { content: '「Gallery'; }
+    40% { content: '「Gallery.'; }
+    45% { content: '「Gallery.a'; }
+    50% { content: '「Gallery.ai'; }
+    55% { content: '「Gallery.ai」'; }
+    60% { content: '「Gallery.ai」の'; }
+    65% { content: '「Gallery.ai」の世'; }
+    70% { content: '「Gallery.ai」の世界'; }
+    75% { content: '「Gallery.ai」の世界に'; }
+    80% { content: '「Gallery.ai」の世界にレ'; }
+    85% { content: '「Gallery.ai」の世界にレッ'; }
+    90% { content: '「Gallery.ai」の世界にレッツ'; }
+    95% { content: '「Gallery.ai」の世界にレッツゴ'; }
+    100% { content: '「Gallery.ai」の世界にレッツゴー！ニャ！'; }
 }
   
   
@@ -799,7 +777,7 @@
     content: "";
     position: absolute;
     bottom: -20px; /* 尾っぽの基点より下に配置 */
-    left: 50%; /* 尾っぽの中心に配置 */
+    left: 10%; /* 尾っぽの中心に配置 */
     width: 10px; /* 小さな丸のサイズ */
     height: 10px; /* 小さな丸のサイズ */
     background: inherit; /* 吹き出しと同じ背景色を使用 */
